--- a/style.css
+++ b/style.css
@@ -62,6 +62,81 @@
 #menu li a:hover {
     color: #ff6f00;
 }
+/*MENU RESPONSIVE*/
+#menu ul li{
+    display: inline;
+    position: relative;
+  }
+  #menu ul li a{
+    color: var(--cor-primaria);
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    transition: background .3s;
+  }
+  #menu ul li a:hover{
+    transition: 0.2s;
+  }
+  #menu ul ul{
+    display: none;
+    left: 0;
+    position: absolute;
+  }
+  .dropdown{
+    width: 0;
+    clear: both;
+    color: #00000000;
+    font-size: 0;
+  }
+@media (max-width: 768px) {
+    .dropdown{
+        width: auto;
+        color: white;
+        background-color: #333;
+        margin-left: 10px;
+        margin-right: 50%;
+        margin-top: 10px;
+        clear: none;
+        font-size: inherit;
+    }
+    .dropdown li a{
+        color: white;
+        background-color: #333;
+    }
+    #menu ul .some{
+       font-size: 0;
+       clear: both;
+     }
+  
+   /*Menu menor*/
+   #menu ul li:hover ul{
+    display: block;
+  }
+  
+  #menu ul ul{
+    width: 150px;
+  }
+  
+  #menu ul ul li a{
+    display: block;
+  }
+  
+  #menu ul ul li a:hover{
+    transition: 0.3s;
+    color:#ff6f00;
+  }
+  .some{
+    width: 0;
+    color: #00000000;
+    padding: 0;
+  }
+  .menuDropdown{
+    margin-left: -30%;
+  }
+  #menu li a:hover {
+    color: rgba(255, 111, 0, 0);
+}
+}
 
 /*--------------------Main pagina 1-----------------------------*/
 .conteiner {
