--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: "fontetext";
     src: url("fonte/Noto_Serif_Vithkuqi/static/NotoSerifVithkuqi-Medium.ttf");
@@ -62,83 +61,36 @@
 #menu li a:hover {
     color: #ff6f00;
 }
+
 /*MENU RESPONSIVE*/
-#menu ul li{
+#menu ul li {
     display: inline;
     position: relative;
-  }
-  #menu ul li a{
+}
+
+#menu ul li a {
     color: var(--cor-primaria);
     text-decoration: none;
     display: inline-block;
     padding: 10px;
     transition: background .3s;
-  }
-  #menu ul li a:hover{
+}
+
+#menu ul li a:hover {
     transition: 0.2s;
-  }
-  #menu ul ul{
+}
+
+#menu ul ul {
     display: none;
     left: 0;
     position: absolute;
-  }
-  .dropdown{
+}
+
+.dropdown {
     width: 0;
     clear: both;
     color: #00000000;
     font-size: 0;
-  }
-@media (max-width: 768px) {
-    .dropdown{
-        width: auto;
-        color: white;
-        background-color: #333;
-        margin-left: 10px;
-        margin-right: 50%;
-        margin-top: 10px;
-        clear: none;
-        font-size: inherit;
-    }
-    .dropdown p{
-        font-size: 16px;
-    }
-    .dropdown li a{
-        color: white;
-        background-color: #333;
-    }
-    #menu ul .some{
-       font-size: 0;
-       clear: both;
-     }
-  
-   /*Menu menor*/
-   #menu ul li:hover ul{
-    display: block;
-  }
-  
-  #menu ul ul{
-    width: 150px;
-  }
-  
-  #menu ul ul li a{
-    display: block;
-  }
-  
-  #menu ul ul li a:hover{
-    transition: 0.3s;
-    color:#ff6f00;
-  }
-  .some{
-    width: 0;
-    color: #00000000;
-    padding: 0;
-  }
-  .menuDropdown{
-    margin-left: -30%;
-  }
-  #menu li a:hover {
-    color: rgba(255, 111, 0, 0);
-}
 }
 
 /*--------------------Main pagina 1-----------------------------*/
@@ -147,7 +99,7 @@
     flex-direction: column;
     justify-content: center;
     background-color: var(--background-black);
-    
+
 }
 
 .Principal {
@@ -194,9 +146,11 @@
     text-align: center;
     margin: 1cm 10cm;
 }
+
 .imghis {
     width: 450px;
 }
+
 .referenciaimg {
     font-size: 10px;
     text-align: center;
@@ -217,7 +171,8 @@
     border-radius: 10px;
     background-color: #fff;
 }
-.Principal a{
+
+.Principal a {
     text-decoration: none;
     color: #121212;
 }
@@ -246,7 +201,7 @@
     line-height: 1.15;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10px;
-    margin: 0cm 2cm ;
+    margin: 0cm 2cm;
     max-width: 80%;
 }
 
@@ -255,7 +210,7 @@
     line-height: 1.15;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10px;
-    margin: 10px 1cm 0cm ;
+    margin: 10px 1cm 0cm;
 }
 
 footer {
@@ -275,20 +230,25 @@ footer {
         margin: 1cm 3cm;
         font-size: 36pt;
     }
+
     .imghis {
         max-width: 400px;
         margin: 1cm 1.6cm;
     }
-    .hisimg{
+
+    .hisimg {
         margin: 0;
     }
-    p{
+
+    p {
         font-size: 12px;
     }
-    .conteudo{
+
+    .conteudo {
         font-size: 15px;
     }
 }
+
 @media (max-width: 768px) {
 
 
@@ -332,8 +292,8 @@ footer {
         margin: 1px 10px;
         text-shadow: rgb(83, 82, 82) 0.1em 0.01em;
     }
-    .tituloParagrafo 
-    .referenciaimg {
+
+    .tituloParagrafo .referenciaimg {
         font-size: 10px;
         text-align: center;
         font-family: Arial, Helvetica, sans-serif;
@@ -343,14 +303,15 @@ footer {
     .hisimg {
         text-align: center;
         margin: 5px 10px;
-
-        .referenciaimg {
-            font-size: 10px;
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
-            color: rgb(0, 0, 0);
-        }
     }
+
+    .referenciaimg {
+        font-size: 10px;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(0, 0, 0);
+    }
+
 
     .imghis {
         width: 300px;
@@ -371,21 +332,215 @@ footer {
 
     }
 
+    .dropdown {
+        width: auto;
+        color: white;
+        background-color: #333;
+        margin-left: 10px;
+        margin-right: 50%;
+        margin-top: 10px;
+        clear: none;
+        font-size: inherit;
+    }
 
+    .dropdown p {
+        font-size: 16px;
+    }
+
+    .dropdown li a {
+        color: white;
+        background-color: #333;
+    }
+
+    #menu ul .some {
+        font-size: 0;
+        clear: both;
+    }
+
+    /*Menu menor*/
+    #menu ul li:hover ul {
+        display: block;
+    }
+
+    #menu ul ul {
+        width: 150px;
+    }
+
+    #menu ul ul li a {
+        display: block;
+    }
+
+    #menu ul ul li a:hover {
+        transition: 0.3s;
+        color: #ff6f00;
+    }
+
+    .some {
+        width: 0;
+        color: #00000000;
+        padding: 0;
+    }
+
+    .menuDropdown {
+        margin-left: -30%;
+    }
+
+    #menu li a:hover {
+        color: rgba(255, 111, 0, 0);
+    }
 }
 
 @media (max-width: 647px) {
-    .dropdown{
+    .dropdown {
         margin-left: 20px;
     }
-    .bibliografia{
+
+    .bibliografia {
         font-size: xx-small;
     }
-    .imghis{
+
+    .imghis {
         width: 200px;
     }
 }
 
-@media (max-width: 425px) {
-    
+@media (max-width: 425px) {}
+
+@media (max-width: 325px) {
+    .banner {
+        width: 100%;
+    }
+
+    .banner h1 {
+        margin: 1.8cm 0;
+        font-size: 29pt;
+    }
+
+    .div1 {
+
+        height: 200px;
+        width: 100px;
+    }
+
+    #duascolum {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .Principal {
+        min-height: 100px;
+        width: 80%;
+        margin: 0.4cm 50% 0.4cm 10%;
+    }
+
+    .tituloLink {
+        font-size: 28px;
+    }
+
+    .tituloParagrafo {
+
+        font-size: 50px;
+        text-align: center;
+        font-family: "fontetext";
+        color: var(--text-black);
+        margin: 1px 10px;
+        text-shadow: rgb(83, 82, 82) 0.1em 0.01em;
+    }
+
+    .tituloParagrafo .referenciaimg {
+        font-size: 10px;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(0, 0, 0);
+    }
+
+    .hisimg {
+        text-align: center;
+        margin: 5px 10px;
+    }
+
+    .referenciaimg {
+        font-size: 10px;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(0, 0, 0);
+    }
+
+
+    .imghis {
+        width: 300px;
+    }
+
+    .hisimg1 {
+        text-align: center;
+        margin: 2px 3px;
+        width: 115px;
+    }
+
+    .hisimg2 {
+
+        grid-column: 3;
+        text-align: center;
+        margin: 2px 3px;
+        width: 115px;
+
+    }
+
+    .dropdown {
+        width: auto;
+        color: white;
+        background-color: #333;
+        margin-left: 10px;
+        margin-right: 50%;
+        margin-top: 10px;
+        clear: none;
+        font-size: inherit;
+    }
+
+    .dropdown p {
+        font-size: 16px;
+    }
+
+    .dropdown li a {
+        color: white;
+        background-color: #333;
+    }
+
+    #menu ul .some {
+        font-size: 0;
+        clear: both;
+    }
+
+    /*Menu menor*/
+    #menu ul li:hover ul {
+        display: block;
+    }
+
+    #menu ul ul {
+        width: 150px;
+    }
+
+    #menu ul ul li a {
+        display: block;
+    }
+
+    #menu ul ul li a:hover {
+        transition: 0.3s;
+        color: #ff6f00;
+    }
+
+    .some {
+        width: 0;
+        color: #00000000;
+        padding: 0;
+    }
+
+    .menuDropdown {
+        margin-left: -30%;
+    }
+
+    #menu li a:hover {
+        color: rgba(255, 111, 0, 0);
+    }
+
 }
