--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     text-align: center;
     margin: 2cm 3cm;
     font-size: 39pt;
-    font-family: "fontetext"; apagar
+    font-family: "fontetext";
 }
 
 
